--- a/package.json
+++ b/package.json
@@ -15,24 +15,28 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "bootstrap": "^5.3.3",
     "chart.js": "^2.9.3",
+    "html-to-pdfmake": "^2.5.12",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.2",
     "jspdf": "^2.5.1",
     "material-table": "^1.59.0",
     "moment": "^2.26.0",
     "moment-timezone": "^0.5.31",
+    "pdfmake": "^0.2.10",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.1",
+    "react-bootstrap": "^1.6.8",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-calendar-icon": "^0.9.4",
     "react-chartjs-2": "^2.9.0",
-    "react-datepicker": "^2.14.1",
+    "react-datepicker": "^2.16.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-time-picker": "^7.0.0",
     "react-tooltip": "^4.2.6",
     "styled-components": "^5.1.1"
   },
