--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-chartjs-2": "^2.9.0",
     "react-datepicker": "^2.16.0",
     "react-dom": "^16.13.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-time-picker": "^7.0.0",
