--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.3",
+    "react-calendar": "^5.0.0",
     "react-calendar-icon": "^0.9.4",
     "react-chartjs-2": "^2.9.0",
     "react-datepicker": "^2.16.0",
